[gd_scene load_steps=13 format=2]

[ext_resource path="res://Games/StoneAge/nodes/EndPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/font/themeA.tres" type="Theme" id=2]
[ext_resource path="res://Games/StoneAge/assets/res/villager.png" type="Texture" id=3]
[ext_resource path="res://Games/StoneAge/assets/res/house.png" type="Texture" id=4]
[ext_resource path="res://assets/font/font_big_outline.tres" type="DynamicFont" id=5]
[ext_resource path="res://Games/StoneAge/assets/res/tool.png" type="Texture" id=6]
[ext_resource path="res://Games/StoneAge/assets/res/camp.png" type="Texture" id=7]
[ext_resource path="res://Games/StoneAge/assets/new_map.jpg" type="Texture" id=8]
[ext_resource path="res://Games/StoneAge/nodes/ScoreLine.tscn" type="PackedScene" id=9]
[ext_resource path="res://Games/StoneAge/assets/res/looter.png" type="Texture" id=10]
[ext_resource path="res://assets/font/font_super_small.tres" type="DynamicFont" id=11]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/villager.jpg-a27644b8d453244426d4324dcc309c30.stex"

[node name="EndPanel" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 1 )

[node name="Map" type="TextureRect" parent="."]
modulate = Color( 0.301961, 0.392157, 0.717647, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Label2" type="Label" parent="."]
margin_left = 16.0
margin_top = 13.0
margin_right = 817.0
margin_bottom = 49.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "La partida ha terminado!"

[node name="Label4" type="Label" parent="."]
margin_left = 72.0
margin_top = 59.0
margin_right = 485.0
margin_bottom = 95.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "EL GANADOR ES..."

[node name="Label_win" type="Label" parent="."]
modulate = Color( 0.945098, 1, 0, 1 )
margin_left = 441.0
margin_top = 29.0
margin_right = 681.0
margin_bottom = 65.0
rect_scale = Vector2( 1.3, 1.3 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "?????"
align = 1

[node name="Label_noFinish" type="Label" parent="."]
visible = false
modulate = Color( 0.847059, 0.847059, 0.847059, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.0
margin_top = -33.5
margin_right = 183.0
margin_bottom = 33.5
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Algunos jugadores no han finalizado aún"
align = 1
autowrap = true

[node name="Refresh" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 309.5
margin_top = -352.0
margin_right = 489.5
margin_bottom = -122.0
theme = ExtResource( 2 )
disabled = true

[node name="VBox_stock" type="VBoxContainer" parent="."]
visible = false
margin_left = 619.0
margin_top = 16.0
margin_right = 661.0
margin_bottom = 228.0

[node name="tool" type="TextureRect" parent="VBox_stock"]
margin_right = 42.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="VBox_stock/tool"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 34.0
margin_top = -12.5
margin_right = 214.0
margin_bottom = 19.5
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "3x15=45"
valign = 1

[node name="villager" type="TextureRect" parent="VBox_stock"]
margin_top = 44.0
margin_right = 42.0
margin_bottom = 84.0
rect_min_size = Vector2( 40, 40 )
texture = SubResource( 1 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="VBox_stock/villager"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 34.0
margin_top = -11.5
margin_right = 214.0
margin_bottom = 20.5
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "3x15=45"
valign = 1

[node name="build" type="TextureRect" parent="VBox_stock"]
margin_top = 88.0
margin_right = 42.0
margin_bottom = 128.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="VBox_stock/build"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 33.0
margin_top = -11.0
margin_right = 213.0
margin_bottom = 21.0
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "3x15=45"
valign = 1

[node name="camp" type="TextureRect" parent="VBox_stock"]
margin_top = 132.0
margin_right = 42.0
margin_bottom = 172.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="VBox_stock/camp"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 34.0
margin_top = -13.5
margin_right = 214.0
margin_bottom = 18.5
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "3x15=45"
valign = 1

[node name="Label_extra" type="Label" parent="."]
visible = false
modulate = Color( 0.960784, 1, 0.6, 1 )
margin_left = 726.0
margin_top = 200.0
margin_right = 798.0
margin_bottom = 232.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "130"
align = 1

[node name="Label5" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 245.5
margin_top = 18.0
margin_right = 614.5
margin_bottom = 85.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Extra por cartas
de civilización"
align = 2

[node name="HeaderTable" type="ColorRect" parent="."]
margin_left = 64.0
margin_top = 108.0
margin_right = 734.0
margin_bottom = 148.0
rect_min_size = Vector2( 630, 0 )
color = Color( 0.141176, 0.141176, 0.141176, 1 )

[node name="ico1" type="TextureRect" parent="HeaderTable"]
margin_left = 225.0
margin_top = 2.0
margin_right = 260.0
margin_bottom = 37.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 3 )
expand = true

[node name="ico2" type="TextureRect" parent="HeaderTable"]
margin_left = 289.0
margin_top = 2.0
margin_right = 324.0
margin_bottom = 37.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 7 )
expand = true

[node name="ico3" type="TextureRect" parent="HeaderTable"]
margin_left = 353.0
margin_top = 2.0
margin_right = 388.0
margin_bottom = 37.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 6 )
expand = true

[node name="ico4" type="TextureRect" parent="HeaderTable"]
margin_left = 417.0
margin_top = 2.0
margin_right = 452.0
margin_bottom = 37.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 4 )
expand = true

[node name="ico5" type="TextureRect" parent="HeaderTable"]
margin_left = 502.0
margin_top = 2.0
margin_right = 537.0
margin_bottom = 37.0
rect_min_size = Vector2( 35, 35 )
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scores" type="Label" parent="HeaderTable/ico5"]
modulate = Color( 0.847059, 0.847059, 0.847059, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -43.0
margin_top = 18.0
margin_right = -37.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 11 )
text = "5000"
align = 2
valign = 2

[node name="lab_scores" type="Label" parent="HeaderTable/ico5"]
modulate = Color( 0.670588, 0.670588, 0.670588, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -43.0
margin_top = 7.0
margin_right = -37.0
margin_bottom = -11.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 11 )
text = "BOTÍN"
align = 2
valign = 2

[node name="looters" type="Label" parent="HeaderTable/ico5"]
modulate = Color( 0.847059, 0.847059, 0.847059, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 38.0
margin_top = 18.0
margin_right = 39.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 11 )
text = "10"
valign = 2
autowrap = true

[node name="lab_looters" type="Label" parent="HeaderTable/ico5"]
modulate = Color( 0.670588, 0.670588, 0.670588, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 38.0
margin_top = 7.0
margin_right = 92.0
margin_bottom = -11.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 11 )
text = "SAQUEADORES"
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalTable" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 151.0
margin_right = -56.0
margin_bottom = -44.0
rect_min_size = Vector2( 680, 0 )

[node name="VBox" type="VBoxContainer" parent="FinalTable"]
margin_right = 670.0
margin_bottom = 517.0
rect_min_size = Vector2( 630, 0 )
custom_constants/separation = 3

[node name="ScoreLine0" parent="FinalTable/VBox" instance=ExtResource( 9 )]

[node name="ScoreLine1" parent="FinalTable/VBox" instance=ExtResource( 9 )]
margin_top = 40.0
margin_bottom = 77.0

[node name="ScoreLine2" parent="FinalTable/VBox" instance=ExtResource( 9 )]
margin_top = 80.0
margin_bottom = 117.0

[node name="ScoreLine3" parent="FinalTable/VBox" instance=ExtResource( 9 )]
margin_top = 120.0
margin_bottom = 157.0

[node name="ScoreLine4" parent="FinalTable/VBox" instance=ExtResource( 9 )]
margin_top = 160.0
margin_bottom = 197.0

[node name="ScoreLine5" parent="FinalTable/VBox" instance=ExtResource( 9 )]
margin_top = 200.0
margin_bottom = 237.0

[node name="ScoreLine6" parent="FinalTable/VBox" instance=ExtResource( 9 )]
margin_top = 240.0
margin_bottom = 277.0

[node name="ScoreLine7" parent="FinalTable/VBox" instance=ExtResource( 9 )]
margin_top = 280.0
margin_bottom = 317.0

[node name="ScoreLine8" parent="FinalTable/VBox" instance=ExtResource( 9 )]
margin_top = 320.0
margin_bottom = 357.0

[node name="ScoreLine9" parent="FinalTable/VBox" instance=ExtResource( 9 )]
margin_top = 360.0
margin_bottom = 397.0

[node name="ScoreLine10" parent="FinalTable/VBox" instance=ExtResource( 9 )]
margin_top = 400.0
margin_bottom = 437.0

[node name="ScoreLine11" parent="FinalTable/VBox" instance=ExtResource( 9 )]
margin_top = 440.0
margin_bottom = 477.0

[node name="ScoreLine12" parent="FinalTable/VBox" instance=ExtResource( 9 )]
margin_top = 480.0
margin_bottom = 517.0
